Updates, some (partial) HTTP/2 support