@@ -17,27 +17,24 @@ compileJava {
     }
 }
 
-test {
-    useJUnitPlatform()
-    jvmArgs '--add-exports', 'java.base/jdk.internal.ref=ALL-UNNAMED' //TODO Cassandra 4 - Remove when no longer needed
+jar {
+    // No Spring Boot 2.5.0+ plain jar
+    enabled = false
 }
 
 dependencies {
-    annotationProcessor 'org.projectlombok:lombok:1.18.20'
-    compileOnly 'org.projectlombok:lombok:1.18.20'
+    annotationProcessor 'org.projectlombok:lombok:1.18.22'
+    compileOnly 'org.projectlombok:lombok:1.18.22'
 
-    implementation 'org.springframework.boot:spring-boot-starter-web:2.4.3'
-    implementation 'org.springframework.data:spring-data-cassandra:3.1.9'
-    implementation 'com.datastax.oss:java-driver-core:4.12.0'         //TODO Cassandra 4 - Remove if no longer needed to overcome 'java.lang.IllegalArgumentException: Unsupported request opcode: 0 in protocol 6'
-    implementation 'com.datastax.oss:native-protocol:1.5.0'           //TODO Cassandra 4 - Remove when java-driver-core pulls version including ProtocolV6ClientCodecs
+    implementation 'org.springframework.boot:spring-boot-starter-web:2.5.5'
+    implementation 'org.springframework.data:spring-data-cassandra:3.2.4'
 
     testImplementation 'org.codehaus.groovy:groovy:3.0.8'
     testImplementation 'org.codehaus.groovy:groovy-json:3.0.8'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test:2.4.3'
-    testImplementation 'org.spockframework:spock-spring:2.0-M4-groovy-3.0'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test:2.5.5'
+    testImplementation 'org.spockframework:spock-spring:2.0-groovy-3.0'
     testImplementation 'org.cassandraunit:cassandra-unit-spring:4.3.1.0'
-    testImplementation 'org.apache.cassandra:cassandra-all:4.0-rc1'              //TODO Cassandra 4 - Remove when version 4 included in cassandra-unit-spring
-    testImplementation 'org.hibernate.validator:hibernate-validator:6.1.5.Final' //TODO Cassandra 4 - Remove when working version inherited frm cassandra-unit-spring
+    testImplementation 'org.apache.cassandra:cassandra-all:4.0.1'              //TODO Cassandra 4 - Remove when version 4 included in cassandra-unit-spring
 }
 
 configurations {
